tests/snapshots/metrics_regression__fixture_corpus_change_grouped_by_repo_text.snap
---
source: tests/metrics_regression.rs
expression: change_grouped
---
Delivery Metrics

Repo                           Commits     Heavy    PR sync    PR Reach   Mainline Reach  Mainline Lead      PR Merge
__REPO_PACEFLOW__                    9         3          —         N/A           100.0%            N/A             N/A

Legend:
- PR sync = completed GitHub PR lookups / heavy commits on github.com (same scope as PR reach).
- PR Reach and PR Merge use completed lookups only; sync the rest with `PACEFLOW_GITHUB_TOKEN` and ingest.
- PR Reach, Mainline Reach, and PR Merge = percentage rates (PR merge N/A when no PR-linked commits in the completed set).
- Mainline Lead = average time from commit to mainline reach for heavy AI commits that reached mainline.
