tests/snapshots/metrics_regression__fixture_corpus_event_stream_all_smoke.snap
---
source: tests/metrics_regression.rs
expression: all_streams_smoke
---
{"stream_type":"change-base","category":"change","event_time":"2026-03-03T09:37:41.000Z","repo_root":"__REPO_VCA__","provider":null,"model":null,"task_key":null,"branch_name":null,"fields":{"ai_added_lines_reaching_mainline":135,"ai_added_lines_removed_within_window":37,"commit_sha":"de8ab41b5cec40dd3dc63fc8bd0ca743cea1d46c","commit_time":"2026-03-03T09:37:41.000Z","commit_total_changed_lines":2283,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_VCA__","reverted_later_flag":0,"week_start":"2026-03-02"}}
{"stream_type":"commit-session-base","category":"change","event_time":"2026-03-03T09:37:41.000Z","repo_root":"__REPO_VCA__","provider":"codex","model":"codex/gpt-5.3-codex","task_key":null,"branch_name":null,"fields":{"ai_added_lines_reaching_mainline":135,"ai_added_lines_removed_within_window":37,"commit_sha":"de8ab41b5cec40dd3dc63fc8bd0ca743cea1d46c","commit_time":"2026-03-03T09:37:41.000Z","commit_total_changed_lines":2283,"heavy_ai_flag":0,"matched_lines":133.66666666666666,"merged_to_mainline_flag":1,"model_name":"codex/gpt-5.3-codex","provider":"codex","repo_root":"__REPO_VCA__","reverted_later_flag":0,"session_id":"019cb311-b93e-7423-aeb4-81249c578638","share_of_ai":0.9901234567901234,"share_of_commit":0.05854869323988903,"week_start":"2026-03-02"}}
{"stream_type":"commit-session-base","category":"change","event_time":"2026-03-03T09:37:41.000Z","repo_root":"__REPO_VCA__","provider":"codex","model":"codex/gpt-5.3-codex","task_key":null,"branch_name":null,"fields":{"ai_added_lines_reaching_mainline":135,"ai_added_lines_removed_within_window":37,"commit_sha":"de8ab41b5cec40dd3dc63fc8bd0ca743cea1d46c","commit_time":"2026-03-03T09:37:41.000Z","commit_total_changed_lines":2283,"heavy_ai_flag":0,"matched_lines":1.3333333333333333,"merged_to_mainline_flag":1,"model_name":"codex/gpt-5.3-codex","provider":"codex","repo_root":"__REPO_VCA__","reverted_later_flag":0,"session_id":"019cd678-8f72-7b43-a07f-d49cdbbb81c9","share_of_ai":0.009876543209876543,"share_of_commit":0.0005840268652358008,"week_start":"2026-03-02"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-03T09:37:41.000Z","repo_root":"__REPO_VCA__","provider":null,"model":null,"task_key":"staging","branch_name":"staging","fields":{"ai_added_lines_reaching_mainline":135,"ai_added_lines_removed_within_window":37,"branch_name":"staging","commit_sha":"de8ab41b5cec40dd3dc63fc8bd0ca743cea1d46c","commit_time":"2026-03-03T09:37:41.000Z","commit_total_changed_lines":2283,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_VCA__","reverted_later_flag":0,"task_key":"staging","week_start":"2026-03-02"}}
{"stream_type":"session-base","category":"session","event_time":"2026-03-03T09:40:09.156Z","repo_root":"__REPO_VCA__","provider":"codex","model":"codex/gpt-5.3-codex","task_key":null,"branch_name":null,"fields":{"accepted_output_flag":1,"debug_loop_flag":0,"first_accepted_change_at":"2026-03-03T15:22:37.117Z","mid_session_error_paste_flag":1,"minutes_to_first_accepted_change":342.46601678431034,"model_name":"codex/gpt-5.3-codex","provider":"codex","repo_root":"__REPO_VCA__","session_commit_within_4h_flag":1,"session_id":"019cb311-b93e-7423-aeb4-81249c578638","started_at":"2026-03-03T09:40:09.156Z","user_turn_count":117,"week_start":"2026-03-02"}}
