tests/snapshots/metrics_regression__fixture_corpus_event_stream_session_base.snap
---
source: tests/metrics_regression.rs
expression: session_stream
---
{"stream_type":"session-base","category":"session","event_time":"2026-03-03T09:40:09.156Z","repo_root":"__REPO_VCA__","provider":"codex","model":"codex/gpt-5.3-codex","task_key":null,"branch_name":null,"fields":{"accepted_output_flag":1,"debug_loop_flag":0,"first_accepted_change_at":"2026-03-03T15:22:37.117Z","mid_session_error_paste_flag":1,"minutes_to_first_accepted_change":342.46601678431034,"model_name":"codex/gpt-5.3-codex","provider":"codex","repo_root":"__REPO_VCA__","session_commit_within_4h_flag":1,"session_id":"019cb311-b93e-7423-aeb4-81249c578638","started_at":"2026-03-03T09:40:09.156Z","user_turn_count":117,"week_start":"2026-03-02"}}
{"stream_type":"session-base","category":"session","event_time":"2026-03-05T07:02:58+00:00","repo_root":"(unknown)","provider":"cursor","model":"cursor/default","task_key":null,"branch_name":null,"fields":{"accepted_output_flag":1,"debug_loop_flag":0,"first_accepted_change_at":"2026-03-05T07:02:58+00:00","mid_session_error_paste_flag":0,"minutes_to_first_accepted_change":0.0,"model_name":"cursor/default","provider":"cursor","repo_root":"(unknown)","session_commit_within_4h_flag":0,"session_id":"b052dae4-a1d2-43f0-a3ba-6faf6a40489e","started_at":"2026-03-05T07:02:58+00:00","user_turn_count":1,"week_start":"2026-03-02"}}
{"stream_type":"session-base","category":"session","event_time":"2026-03-10T06:39:11.222Z","repo_root":"__REPO_VCA__","provider":"codex","model":"codex/gpt-5.3-codex","task_key":null,"branch_name":null,"fields":{"accepted_output_flag":1,"debug_loop_flag":0,"first_accepted_change_at":"2026-03-10T11:37:27.402Z","mid_session_error_paste_flag":1,"minutes_to_first_accepted_change":298.26966628432274,"model_name":"codex/gpt-5.3-codex","provider":"codex","repo_root":"__REPO_VCA__","session_commit_within_4h_flag":1,"session_id":"019cd678-8f72-7b43-a07f-d49cdbbb81c9","started_at":"2026-03-10T06:39:11.222Z","user_turn_count":15,"week_start":"2026-03-09"}}
