tests/snapshots/metrics_regression__fixture_corpus_event_stream_task_commit_base.snap
---
source: tests/metrics_regression.rs
expression: task_commit_stream
---
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-03T09:37:41.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"staging","branch_name":"staging","fields":{"ai_added_lines_reaching_mainline":135,"ai_added_lines_removed_within_window":37,"branch_name":"staging","commit_sha":"de8ab41b5cec40dd3dc63fc8bd0ca743cea1d46c","commit_time":"2026-03-03T09:37:41.000Z","commit_total_changed_lines":2283,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"staging","week_start":"2026-03-02"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-05T08:40:50.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"staging","branch_name":"staging","fields":{"ai_added_lines_reaching_mainline":1091,"ai_added_lines_removed_within_window":42,"branch_name":"staging","commit_sha":"17a3ee9fd5e70b92092dd9ec160a63cd5fb01b1d","commit_time":"2026-03-05T08:40:50.000Z","commit_total_changed_lines":3003,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"staging","week_start":"2026-03-02"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-06T08:24:52.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"staging","branch_name":"staging","fields":{"ai_added_lines_reaching_mainline":1505,"ai_added_lines_removed_within_window":24,"branch_name":"staging","commit_sha":"2dcb057965747739cea8bb891a260c347be8cb39","commit_time":"2026-03-06T08:24:52.000Z","commit_total_changed_lines":1573,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":1,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"staging","week_start":"2026-03-02"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-10T08:33:33.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"staging","branch_name":"staging","fields":{"ai_added_lines_reaching_mainline":1225,"ai_added_lines_removed_within_window":21,"branch_name":"staging","commit_sha":"f3d68adc96fbfb533c2e76cda51ca174f6d7954f","commit_time":"2026-03-10T08:33:33.000Z","commit_total_changed_lines":1374,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":1,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"staging","week_start":"2026-03-09"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-10T11:54:22.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"PAC-999","branch_name":"codex/PAC-999-task-stats-demo","fields":{"ai_added_lines_reaching_mainline":0,"ai_added_lines_removed_within_window":0,"branch_name":"codex/PAC-999-task-stats-demo","commit_sha":"75c5d97151a6a681a26737f88ec4cc1e3ad7fe23","commit_time":"2026-03-10T11:54:22.000Z","commit_total_changed_lines":2,"confidence":1.0,"fallback_flag":0,"heavy_ai_flag":0,"merged_to_mainline_flag":0,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"PAC-999","week_start":"2026-03-09"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-11T13:44:10.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"main","branch_name":"main","fields":{"ai_added_lines_reaching_mainline":1276,"ai_added_lines_removed_within_window":14,"branch_name":"main","commit_sha":"9ffe1bf647c827de2b2def4ccfb32ce7cee1b207","commit_time":"2026-03-11T13:44:10.000Z","commit_total_changed_lines":1466,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":1,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"main","week_start":"2026-03-09"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-12T06:20:19.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"main","branch_name":"main","fields":{"ai_added_lines_reaching_mainline":1,"ai_added_lines_removed_within_window":0,"branch_name":"main","commit_sha":"47d03452796ad3cda5c12edeb61a28965e76b4bd","commit_time":"2026-03-12T06:20:19.000Z","commit_total_changed_lines":49,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"main","week_start":"2026-03-09"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-13T16:06:41.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"main","branch_name":"main","fields":{"ai_added_lines_reaching_mainline":0,"ai_added_lines_removed_within_window":0,"branch_name":"main","commit_sha":"77abc1af8a5af3614fbd7d6639bfc9ef557b8f29","commit_time":"2026-03-13T16:06:41.000Z","commit_total_changed_lines":1055,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"main","week_start":"2026-03-09"}}
{"stream_type":"task-commit-base","category":"change","event_time":"2026-03-13T16:17:59.000Z","repo_root":"__REPO_AEA__","provider":null,"model":null,"task_key":"main","branch_name":"main","fields":{"ai_added_lines_reaching_mainline":28,"ai_added_lines_removed_within_window":0,"branch_name":"main","commit_sha":"32dfa74d2e2bf9c06c815b31c9de01037db5ffbf","commit_time":"2026-03-13T16:17:59.000Z","commit_total_changed_lines":107,"confidence":0.5,"fallback_flag":1,"heavy_ai_flag":0,"merged_to_mainline_flag":1,"repo_root":"__REPO_AEA__","reverted_later_flag":0,"task_key":"main","week_start":"2026-03-09"}}
