tests/snapshots/metrics_regression__fixture_corpus_lifecycle_grouped_by_repo_text.snap
---
source: tests/metrics_regression.rs
expression: lifecycle_grouped
---
Lifecycle Metrics
L1 code churn rate = share of AI-added lines on heavy AI commits that were later removed within the churn window
L4 revert rate = share of heavy AI commits that were later reverted

Group                            Heavy     L1(churn)    L4(revert)
__REPO_AEA__                         3          1.5%          0.0%
