tests/snapshots/metrics_regression__fixture_corpus_lifecycle_report_text.snap
---
source: tests/metrics_regression.rs
expression: lifecycle
---
Lifecycle Metrics
L1 code churn rate = share of AI-added lines on heavy AI commits that were later removed within the churn window
L4 revert rate = share of heavy AI commits that were later reverted

Heavy commits: 3
L1 Code Churn Rate: 1.47% (59/4006)
L4 Revert Rate: 0.00% (0/3)
