tests/snapshots/metrics_regression__fixture_corpus_session_report_structured.snap
---
source: tests/metrics_regression.rs
expression: structured_session
---
sessions: "3"
s2_avg: "44.33"
debug_loop_rate: 0.00% (0/3)
s6_rate: 66.67% (2/3)
s9_rate: 66.67% (2/3)
