tests/snapshots/metrics_regression__fixture_corpus_session_report_text.snap
---
source: tests/metrics_regression.rs
expression: session
---
Session Metrics
Sessions analyzed: 3

┌──────────────────────┬──────────────┬────────┐
│ Signal               │ Value        │ Status │
├──────────────────────┼──────────────┼────────┤
│ Time to first change │ 213.58 min   │ risk   │
│ No-output sessions   │ 0.00% (0/3)  │ good   │
│ Sessions to commit   │ 66.67% (2/3) │ good   │
│ Error pastes         │ 66.67% (2/3) │ risk   │
│ Avg prompts          │ 44.33        │ risk   │
│ Debug loops          │ 0.00% (0/3)  │ good   │
└──────────────────────┴──────────────┴────────┘

Legend:
- Avg prompts: average number of user prompts per session.
- Time to first change: average minutes from session start to first accepted code change.
- Debug loops: share of sessions that look like repeated fix-retry loops.
- Error pastes: share of sessions where an error message was pasted mid-session.
- Sessions to commit: share of sessions followed by a commit within 4 hours.
- No-output sessions: share of sessions with no accepted code changes.
- Status: lower is better except Sessions to commit.
