tests/snapshots/metrics_regression__fixture_corpus_session_weekly_by_provider_text.snap
---
source: tests/metrics_regression.rs
expression: session_weekly
---
Session Metrics
S2 = average user prompts per session
S4 = debug-loop session rate
S6 = mid-session error-paste rate
S9 = session-to-commit rate (session end + 4h)

Week        Group                         Sessions     S2(avg)        S4(loop)       S6(error)          S9(4h)
2026-03-02  codex                                1      117.00            0.0%          100.0%          100.0%
2026-03-02  cursor                               1        1.00            0.0%            0.0%            0.0%
2026-03-09  codex                                1       15.00            0.0%          100.0%          100.0%
